--- a/Nonsense/Views/Feedback/Index.cshtml
+++ b/Nonsense/Views/Feedback/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 @section Styles {
-    <link href="~/lib/stylesheets/pages/feedback.css" rel="stylesheet" />
+    <link href="~/css/pages/feedback.css" rel="stylesheet" />
 }
 
 <h1>Обратная связь</h1>
