--- a/Nonsense/Views/Profile/Index.cshtml
+++ b/Nonsense/Views/Profile/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 @section Styles {
-    <link href="~/lib/stylesheets/pages/profile.css" rel="stylesheet" />
+    <link href="~/css/pages/profile.css" rel="stylesheet" />
 }
 
 <h1>Мой профиль</h1>
