--- a/Nonsense/Views/Shared/_Layout.cshtml
+++ b/Nonsense/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>@ViewBag.Title - Ерунда</title>
-  <link asp-href-include="~/lib/stylesheets/globals/*.css" rel="stylesheet" />
+  <link asp-href-include="~/css/globals/*.css" rel="stylesheet" />
   @RenderSection("Styles", false)
 </head>
 <body>
@@ -73,6 +73,7 @@
       <p>&copy; 2018 ExcellentNonsense</p>
     </footer>
   </div>
+  <script src="~/js/common.js"></script>
   @RenderSection("Scripts", false)
 </body>
 </html>
