--- a/Nonsense/Views/Profile/Index.cshtml
+++ b/Nonsense/Views/Profile/Index.cshtml
@@ -7,19 +7,37 @@
 }
 
 <h1>Мой профиль</h1>
-<img src="~/lib/content/user_photo.jpg" alt="Ваше фото" />
+<img src="~/content/logged_in_user_photo.jpg" alt="Ваше фото" class="user-photo"/>
+
 <h2>Личная информация</h2>
-<dl>
-  <dt>Логин</dt><dd>ALEX ADONNIX</dd>
-  <dt>Имя</dt><dd>Имя неизвестно</dd>
-  <dt>Фамилия</dt><dd>Фамилия неизвестна</dd>
-  <dt>Дата рождения</dt><dd>01.01.1990</dd>
-  <dt>Безрассудно трачу драгоценное время на</dt><dd>Канал RedBully на YouTube</dd>
+<dl class="data-table">
+  <dt class="data-table__key">Логин
+    </dt><dd class="data-table__val">ALEX ADONNIX</dd>
+
+  <dt class="data-table__key">Имя
+    </dt><dd class="data-table__val"dd>Имя неизвестно</dd>
+
+  <dt class="data-table__key">Фамилия
+    </dt><dd class="data-table__val">Фамилия неизвестна</dd>
+
+  <dt class="data-table__key">Дата рождения
+    </dt><dd class="data-table__val">01.01.1990</dd>
+
+  <dt class="data-table__key">Безрассудно трачу драгоценное время на
+    </dt><dd class="data-table__val">Канал RedBully на YouTube</dd>
 </dl>
+
 <h2>Потрачено на ерунду</h2>
-<dl>
-  <dt>Сегодня</dt><dd>00:16</dd>
-  <dt>За месяц</dt><dd>05:49</dd>
-  <dt>За год</dt><dd>62:35</dd>
-  <dt>Всего</dt><dd>122:04</dd>
+<dl class="data-table">
+  <dt class="data-table__key">Сегодня
+    </dt><dd class="data-table__val">00:16</dd>
+
+  <dt class="data-table__key">За месяц
+    </dt><dd class="data-table__val">05:49</dd>
+
+  <dt class="data-table__key">За год
+    </dt><dd class="data-table__val">62:35</dd>
+
+  <dt class="data-table__key">Всего
+    </dt><dd class="data-table__val">122:04</dd>
 </dl>
