--- a/Nonsense/wwwroot/css/globals/all.css
+++ b/Nonsense/wwwroot/css/globals/all.css
@@ -1,55 +1,56 @@
-:root {
-  --base_color: hsl(227, 64%, 95%);
-  --main_color: hsl(279, 100%, 37%);
-  --highlight_color: hsl(39, 100%, 46%);
-}
 html {
   font-size: 62.5%; /* 10px / 16px * 100% */
 }
+
 body {
-  background: var(--base_color);
+  background: var(--base-color);
   font-family: Tahoma, sans-serif;
 }
+
 h1 {
   margin: 20px 0;
   font-size: 2.4rem;
   line-height: 3.4rem;
   font-weight: normal;
-  color: var(--highlight_color);
+  color: var(--highlight-color);
 }
+
 h2 {
   margin: 20px 0;
   font-size: 2.1rem;
   line-height: 3rem;
   font-weight: normal;
-  color: var(--highlight_color);
+  color: var(--highlight-color);
 }
+
 h3 {
   margin: 20px 0;
   font-size: 1.8rem;
   line-height: 2.6rem;
   font-weight: normal;
-  color: var(--highlight_color);
+  color: var(--highlight-color);
 }
 
 
 /* background
    ========================================================================== */
 @media (min-width: 880px) {
-  .bg_container {
+  .bg-container {
     width: 98.4%;
     height: 96.6vh;
     position: fixed;
     top: 1.6vh;
     left: 0.775%;
   }
-  #bg_time_tags {
+
+  #bg-time-tags {
     background-image: url(../../images/bg_time_tags.png);
     background-size: contain;
     opacity: 0.05;
     z-index: -4;
   }
-  #bg_water {
+
+  #bg-water {
     background-image: url(../../images/bg_water.png);
     background-size: contain;
     background-position-x: -86vw;
@@ -57,7 +58,8 @@ h3 {
     opacity: 0.35;
     z-index: -3;
   }
-  #bg_glare {
+
+  #bg-glare {
     background: linear-gradient(115deg, 
       hsla(0, 0%, 0%, 0) 15%,
       hsla(0, 100%, 100%, 0.4) 16%,
@@ -78,12 +80,14 @@ h3 {
     );
     z-index: -2;
   }
-  #bg_border_shadow {
+
+  #bg-border-shadow {
     border: 1px solid hsl(0, 0%, 30%);
     box-shadow: 0 0 15px black;
     z-index: -1;
   }
-  #bg_strip_top {
+
+  #bg-strip-top {
     width: 100%;
     height: 1.7vh;
     display: flex;
@@ -93,7 +97,8 @@ h3 {
     left: 0;
     z-index: 1001;
   }
-  #bg_strip_bottom {
+
+  #bg-strip-bottom {
     width: 100%;
     height: 1.8vh;
     display: flex;
@@ -103,35 +108,39 @@ h3 {
     left: 0;
     z-index: 1002;
   }
-  .bg_strip_left {
+
+  .bg-strip-left {
     width: 10%;
     min-width: 100px;
     background: linear-gradient(270deg,
-      var(--base_color) 0%,
+      var(--base-color) 0%,
       hsla(0, 0%, 0%, 0) 100%
     );
   }
-  .bg_strip_center {
+
+  .bg-strip-center {
     width: 640px;
-    background: var(--base_color);
+    background: var(--base-color);
     flex-shrink: 0;
   }
-  .bg_strip_right {
+
+  .bg-strip-right {
     width: 10%;
     min-width: 100px;
     background: linear-gradient(90deg,
-      var(--base_color) 0%,
+      var(--base-color) 0%,
       hsla(0, 0%, 0%, 0) 100%
     );
   }
 }
 
 
-#top {
+#page-top {
   position: absolute;
   top: 0;
   left: 0;
 }
+
 #wrapper {
   width: 640px;
   min-height: 100vh;
@@ -140,6 +149,7 @@ h3 {
   flex-direction: column;
   background: hsl(0, 0%, 100%);
 }
+
 @media (min-width: 880px) {
   #wrapper {
     min-height: 96.8vh;
@@ -153,16 +163,18 @@ h3 {
 #wrapper header {
   position: relative;
 }
-#logo_user_line_bg {
+
+.header-bg {
   height: 134px;
   width: 100%;
-  background: var(--main_color);
+  background: var(--main-color);
   clip-path: polygon(0% 0%, 0% 100%, 5% 90%, 12% 90%, 22% 100%, 33% 100%, 39% 93%, 45% 93%, 49% 98%, 56% 100%, 60% 90%, 75% 90%, 90% 100%, 100% 100%, 100% 0%);
   position: absolute;
   top: 0;
   left: 0;
 }
-#logo_user_line {
+
+.header {
   padding: 15px 5px 25px;
   margin: 0 0 20px 0;
   display: flex;
@@ -170,25 +182,26 @@ h3 {
   background: hsl(227, 64%, 98%);
   clip-path: polygon(0% 0%, 0% 100%, 5% 90%, 12% 90%, 22% 100%, 33% 100%, 39% 93%, 45% 93%, 49% 98%, 56% 100%, 60% 90%, 75% 90%, 90% 100%, 100% 100%, 100% 0%);
 }
-/* logo
+/* site-logo
 _____________________________________________________________________________ */
-#logo_user_line #logo {
+.site-logo {
   width: 390px;
   height: 93px;
-  background-image: url(../../images/logo.svg);
+  background-image: url(../../images/site_logo.svg);
   background-size: contain;
   background-repeat: no-repeat;
 }
-/* user
+/* logged-in-user
 _____________________________________________________________________________ */
-#logo_user_line #user {
+.logged-in-user {
   width: 150px;
   height: 93px;
   display: flex;
   flex-direction: column-reverse;
   align-items: flex-end;
 }
-#logo_user_line #user #user_name {
+
+.logged-in-user__name {
   width: 100%;
   height: 14px;
   padding: 0;
@@ -199,63 +212,72 @@ _____________________________________________________________________________ */
   line-height: 1em;
   text-align: right;
 }
-#logo_user_line #user #user_name a {
-  color: var(--main_color);
+
+.logged-in-user__name a {
+  color: var(--main-color);
   text-decoration: none;
 }
-#logo_user_line #user #user_photo {
+
+.logged-in-user__photo {
   width: 100%;
   height: 66px;
   overflow: hidden;
-  background: url(../../content/user_photo.jpg);
+  background: url(../../content/logged_in_user_photo.jpg);
   background-size: cover;
   box-shadow: -1px 0 1px;
 }
-/* nav
+/* nav-header
 _____________________________________________________________________________ */
-#nav_line {
+.nav-header {
   padding: 0 5px 0;
-  border-bottom: 5px solid var(--main_color);
+  border-bottom: 5px solid var(--main-color);
 }
-#nav_line nav ul {
+
+.nav-header__links-container {
   padding: 0;
   margin: 0;
   list-style: none;
 }
-#nav_line nav ul li {
+
+.nav-header__link {
   display: inline-block;
   margin: 0 5px 4px 0;
 }
-#nav_line nav ul li a {
+
+.nav-header__link a {
   padding: 0 15px 0;
   font-size: 1.4rem;
   text-transform: uppercase;
-  color: var(--main_color);
+  color: var(--main-color);
   text-decoration: none;
 }
-#nav_line nav ul li a:hover,
-#nav_line nav ul li a:focus {
-  border-bottom: 4px solid var(--main_color);
+
+.nav-header__link a:hover,
+.nav-header__link a:focus {
+  border-bottom: 4px solid var(--main-color);
 }
-#nav_line nav ul li a.active_link {
-  border-bottom: 4px solid var(--main_color);
+
+.nav-header__active-link {
+  border-bottom: 4px solid var(--main-color);
 }
 
 
 /* main
    ========================================================================== */
-main {
+#wrapper main {
   padding: 0 5px;
   margin: 40px 0;
   flex: 1;
   font-size: 1.4rem;
   line-height: 2rem;
 }
-main h1,
-main h2 {
+
+#wrapper main h1,
+#wrapper main h2 {
   padding: 0 0 0 15px;
 }
-main p {
+
+#wrapper main p {
   padding: 0 80px;
   margin: 20px 0;
 }
@@ -266,50 +288,60 @@ main p {
 #wrapper footer {
   background: hsl(279, 40%, 27%);
 }
-#scroll_to_top_btn {
+
+#btn-scroll-to-top {
   width: 100%;
   height: 16px;
   padding: 4px 0 0 0;
   display: block;
-  background: var(--highlight_color);
+  background: var(--highlight-color);
   box-shadow: inset 0 5px 2px 1px hsl(279, 40%, 27%);
   text-align: center;
   text-decoration: none;
   font-size: 14px;
   color: hsl(279, 40%, 27%);
 }
-#footer_nav {
+
+.nav-footer {
   padding: 20px 5px 0;
 }
-#footer_nav nav {
+
+.nav-footer nav {
   display: flex;
 }
-#footer_nav nav ul {
+
+.nav-footer__links-container {
   width: 230px;
   padding: 0 0 0 15px;
   margin: 0 170px 0 0;
   list-style: none;  
 }
-#footer_nav nav ul:last-child {
+
+.nav-footer__links-container:last-child {
    margin: 0;
 }
-#footer_nav nav ul li {
+
+.nav-footer__link {
   padding: 0 0 5px;
 }
-#footer_nav nav ul li:last-child {
+
+.nav-footer__link:last-child {
   padding: 0;
 }
-#footer_nav nav ul li a {
+
+.nav-footer__link a {
   font-size: 1.4rem;
   text-transform: uppercase;
   color: hsl(0, 0%, 100%);
   text-decoration: none;
 }
-#footer_nav nav ul li a:hover,
-#footer_nav nav ul li a:focus {
+
+.nav-footer__link a:hover,
+.nav-footer__link a:focus {
   text-decoration: underline;
 }
-#wrapper footer p {
+
+#footer-copyright {
   padding: 20px 0;
   margin: 0;
   font-size: 1.4rem;
