--- a/Nonsense/wwwroot/css/pages/band_flickr.css
+++ b/Nonsense/wwwroot/css/pages/band_flickr.css
@@ -1,12 +1,11 @@
-﻿/* main
-   ========================================================================== */
-.item .item_image_source {
+﻿.band-item__image-source-info {
   padding: 0 0 0 15px;
   margin: 0;
   font-size: 1.2rem;
   font-weight: bold;
 }
-.item .item_image_source a {
-  color: var(--main_color);
+
+.band-item__image-source-info a {
+  color: var(--main-color);
   text-decoration: none;
 }
