Adjust page wrapper height.

--- a/Nonsense/wwwroot/css/globals/all.css
+++ b/Nonsense/wwwroot/css/globals/all.css
@@ -146,7 +146,7 @@ h3 {
 
 @media (min-width: 880px) {
   #wrapper {
-    min-height: 96.8vh;
+    min-height: 96.7vh;
     margin: 1.6vh auto 1.7vh;
   }
 }
@@ -154,7 +154,7 @@ h3 {
 
 /* header
    ========================================================================== */
-#wrapper header {
+header {
   position: relative;
 }
 
@@ -258,7 +258,7 @@ _____________________________________________________________________________ */
 
 /* main
    ========================================================================== */
-#wrapper main {
+main {
   padding: 0 5px;
   margin: 40px 0;
   flex: 1;
@@ -266,12 +266,12 @@ _____________________________________________________________________________ */
   line-height: 2rem;
 }
 
-#wrapper main h1,
-#wrapper main h2 {
+main h1,
+main h2 {
   padding: 0 0 0 15px;
 }
 
-#wrapper main p {
+main p {
   padding: 0 80px;
   margin: 20px 0;
 }
@@ -279,7 +279,7 @@ _____________________________________________________________________________ */
 
 /* footer
    ========================================================================== */
-#wrapper footer {
+footer {
   background: hsl(279, 40%, 27%);
 }
 
