--- a/Nonsense/Views/Shared/_Layout.cshtml
+++ b/Nonsense/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>@ViewBag.Title - Ерунда</title>
   <link asp-href-include="~/css/globals/*.css" rel="stylesheet" />
+  <link asp-href-include="~/css/modules/*.css" rel="stylesheet" />
   @RenderSection("Styles", false)
 </head>
 <body>
