Add secondary navigation to Band pages.

--- a/Nonsense/Views/Band/MyBand.cshtml
+++ b/Nonsense/Views/Band/MyBand.cshtml
@@ -10,6 +10,10 @@
   <script src="~/js/band_user.js"></script>
 }
 
+<h3>
+  Мои новые сообщения.
+</h3>
+
 @section ServiceContent {
   <template class="band-item-template js-band-item-template">
     <div class="band-item">
