--- a/Nonsense/Views/Shared/_Layout.cshtml
+++ b/Nonsense/Views/Shared/_Layout.cshtml
@@ -44,8 +44,8 @@
       <div class="nav-header">
         <nav>
           <ul class="nav-header__links-container">
-            <li class="nav-header__link"><a asp-action="Index" asp-controller="Home" th-is-active-route>Главная
-            </a></li><li class="nav-header__link"><a asp-action="Index" asp-controller="Band" th-is-active-route>Лента
+            <li class="nav-header__link"><a asp-action="Index" asp-controller="Home" th-nav-header th-is-active-route>Главная
+            </a></li><li class="nav-header__link"><a asp-action="Index" asp-controller="Band" th-nav-header th-is-active-route>Лента
             </a></li>
           </ul>
         </nav>
