--- a/Nonsense/Views/Band/FlickrBand.cshtml
+++ b/Nonsense/Views/Band/FlickrBand.cshtml
@@ -10,6 +10,10 @@
   <script src="~/js/band_flickr.js"></script>
 }
 
+<h3>
+  Случайные изображения с Flickr в категории "Ерунда".
+</h3>
+
 @section ServiceContent {
   <template class="band-item-template js-band-item-template">
     <div class="band-item">
