--- a/Nonsense/wwwroot/css/pages/band.css
+++ b/Nonsense/wwwroot/css/pages/band.css
@@ -20,8 +20,52 @@
 }
 
 
-/* main
+/* nav-secondary
    ========================================================================== */
+
+.nav-secondary {
+  border-bottom: 1px solid var(--main-color);
+}
+
+.nav-secondary__links-container {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.nav-secondary__link {
+  margin: 0 5px 0 0;
+  display: inline-block;
+  transform: translateY(-2px);
+}
+
+.nav-secondary__link a {
+  padding: 0 15px 4px 15px;
+  font-size: 1.4rem;
+  line-height: 2rem;
+  text-transform: uppercase;
+  color: var(--main-color);
+  text-decoration: none;
+}
+
+.nav-secondary__link a:hover,
+.nav-secondary__link a:focus {
+  border-top: 4px solid var(--main-color);
+}
+
+.th-nav-secondary__link--active {
+  background: hsl(0, 0%, 100%);
+  border: 1px solid var(--main-color);
+  border-top-width: 4px;
+  border-bottom: none;
+}
+
+/* band-item
+   ========================================================================== */
+
+.band-items-container {
+  padding: 20px 0 0 0;
+}
 
 .band-item {
   padding: 0 0 5px 0;
@@ -34,9 +78,6 @@
   margin: 0;
   border-bottom: none;
 }
-
-/* band-item__image
-   ========================================================================== */
 
 .band-item__image-container {
   position: relative;
