--- a/Nonsense/Views/Shared/_Layout.cshtml
+++ b/Nonsense/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <partial name="_Favicons" />
   <title>@ViewBag.Title - Ерунда</title>
   <link asp-href-include="~/css/globals/*.css" rel="stylesheet" />
   <link asp-href-include="~/css/modules/*.css" rel="stylesheet" />
