Restructure the solution entirely.

--- a/Nonsense.Web/Features/Shared/_Layout.cshtml
+++ b/Nonsense.Web/Features/Shared/_Layout.cshtml
@@ -71,7 +71,7 @@
           </ul>
         </nav>
       </div>
-      <p id="footer-copyright">&copy; 2018 ExcellentNonsense</p>
+      <p id="footer-copyright">&copy; 2018-2019 ExcellentNonsense</p>
     </footer>
   </div>
   @RenderSection("ServiceContent", false)
