--- a/Nonsense.Web/Features/Shared/_Layout.cshtml
+++ b/Nonsense.Web/Features/Shared/_Layout.cshtml
@@ -3,12 +3,16 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <partial name="_Favicons" />
   <title>@ViewBag.Title - Ерунда</title>
-  <link asp-href-include="~/css/globals/*.css" rel="stylesheet" />
-  <link asp-href-include="~/css/modules/*.css" rel="stylesheet" />
-  @RenderSection("Styles", false)
+  <link href="~/lib/normalize/normalize.min.css" />
+  <environment include="Development">
+    <link asp-href-include="~/css/**/*.css" asp-href-exclude="~/css/site.css" asp-append-version="true" rel="stylesheet" />
+  </environment>
+  <environment exclude="Development">
+    <link href="~/css/site.css" asp-append-version="true" rel="stylesheet" />
+  </environment>
 </head>
 <body>
   <div id="bg-time-tags" class="bg-container"></div>
@@ -75,8 +79,11 @@
     </footer>
   </div>
   @RenderSection("ServiceContent", false)
-  <script src="~/js/global.js"></script>
-  <script src="~/js/utils.js"></script>
-  @RenderSection("Scripts", false)
+  <environment include="Development">
+    <script asp-src-include="~/js/**/*.js" asp-src-exclude="~/js/site.js"></script>
+  </environment>
+  <environment exclude="Development">
+    <script src="~/js/site.js"></script>
+  </environment>
 </body>
 </html>
