--- a/Nonsense.MvcApp/Areas/_ViewImports.cshtml
+++ b/Nonsense.MvcApp/Areas/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 
 @using Nonsense.Infrastructure.Identity
 @using Nonsense.MvcApp.Areas.Admin.Features.Users
-@using Nonsense.Domain.Entities
+@using Nonsense.Application.Users.Dto
