--- a/Nonsense.MvcApp/Areas/Admin/Features/Users/Index.cshtml
+++ b/Nonsense.MvcApp/Areas/Admin/Features/Users/Index.cshtml
@@ -5,7 +5,9 @@
 }
 
 <div class="p-1 bg-primary text-white"><h4>Пользователи</h4></div>
+
 <div class="text-danger" asp-validation-summary="ModelOnly"></div>
+
 <table class="table table-sm table-bordered">
   <tr><th>ID</th><th>Имя</th><th>Email</th></tr>
   @if (Model.Count() == 0) {
@@ -19,9 +21,9 @@
         <td>@user.Email</td>
         <td>
           <a asp-action="Display" asp-route-id="@user.Id" class="btn btn-sm btn-info">Карточка</a>
-          <a asp-action="Edit" asp-route-id="@user.Id" class="btn btn-sm btn-info">Изменить</a>
+          <a asp-action="Edit" asp-route-id="@user.Id" class="btn btn-sm btn-info">Редактировать</a>
           <form asp-action="Delete" asp-route-id="@user.Id" method="post" class="d-inline-block">
-            <button type="submit" class="btn btn-sm btn-danger">Удалить</button>
+            <button type="submit" class="btn btn-sm btn-danger ml-2">Удалить</button>
           </form>
         </td>
       </tr>
